feature/added content on cards

--- a/partials/post-creativetim0.hbs
+++ b/partials/post-creativetim0.hbs
@@ -1,17 +1,17 @@
 
 <div class="card card-static" id="theme-3">
   <div class="card-header">
-    <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')" >
-      <img class="card-img-top" src="{{asset "img/light-bootstrap-dashboard-angular.jpg"}}"></img>
+    <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')" >
+      <img class="card-img-top" src="{{asset "img/material-dashboard-pro-angular.jpg"}}"></img>
     </a>
   </div>
 
   <div class="card-body">
     <a class="card-title" target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321"  onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')">Material Dashboard Pro</a>
-
+<p class="card-text">Material Dashboard Pro for Angular. Forget about boring dashboards and grab yourself a copy!</p>
   </div>
   <div class="card-footer">
-    <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321"  class="btn btn-danger btn-round" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')">Read more</a>
+    <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321"  class="btn btn-outline-danger btn-round" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')">Read more</a>
       <span class="badge badge-primary badge-lg float-right">Featured</span>
   </div>
 </div>
@@ -25,10 +25,10 @@
 
   <div class="card-body">
     <a class="card-title" target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">Light Bootstrap Dashboard Pro</a>
-
+    <p class="card-text">Light Dashboard Pro for Angular. Forget about boring dashboards and grab yourself a copy!</p>
   </div>
   <div class="card-footer">
-    <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321"  class="btn btn-danger btn-round" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">Read more</a>
+    <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321"  class="btn btn-outline-danger btn-round" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">Read more</a>
     <span class="badge badge-primary badge-lg float-right">Featured</span>
   </div>
 </div>
