--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7101,6 +7101,8 @@ a {
   .card .card-footer {
     background-color: transparent;
     border-top: none; }
+    .card .card-footer .btn-outline-danger:hover {
+      color: #ffffff !important; }
   .card .card-body {
     padding-top: 0; }
 
