--- a/assets/scss/custom/_card.scss
+++ b/assets/scss/custom/_card.scss
@@ -30,6 +30,10 @@
   .card-footer{
     background-color: transparent;
     border-top: none;
+
+    .btn-outline-danger:hover{
+      color: #ffffff !important;
+    }
   }
 
   .card-body{
