--- a/partials/post.hbs
+++ b/partials/post.hbs
@@ -7,8 +7,9 @@
   </div>
   <div class="card-body">
     <a class="card-title" target="_blank" href="{{ url }}" >{{title}}</a>
+    <p>{{content}}</p>
   </div>
   <div class="card-footer">
-    <a target="_blank" class="btn btn-danger btn-round" href="{{ url }}">Read more</a>
+    <a target="_blank" class="btn btn-outline-danger btn-round" href="{{ url }}">Read more</a>
   </div>
 </div>
