--- a/partials/post-creativetim0.hbs
+++ b/partials/post-creativetim0.hbs
@@ -11,7 +11,7 @@
 <p class="card-text">Material Dashboard Pro for Angular. Forget about boring dashboards and grab yourself a copy!</p>
   </div>
   <div class="card-footer">
-    <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321"  class="btn btn-outline-danger btn-round" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')">Read more</a>
+    <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321"  class="btn btn-outline-danger btn-round btn-sm" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')">Read more</a>
 
   </div>
 </div>
@@ -28,7 +28,7 @@
     <p class="card-text">Light Dashboard Pro for Angular. Forget about boring dashboards and grab yourself a copy!</p>
   </div>
   <div class="card-footer">
-    <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321"  class="btn btn-outline-danger btn-round" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">Read more</a>
+    <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321"  class="btn btn-outline-danger btn-round btn-sm" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">Read more</a>
 
   </div>
 </div>
