--- a/partials/post.hbs
+++ b/partials/post.hbs
@@ -6,8 +6,15 @@
     </a>
   </div>
   <div class="card-body">
+    <div class="tags-area">
+      <span href="{{url}}" class="text-danger">
+        <b>
+          {{tags}}
+        </b>
+      </span>
+    </div>
     <a class="card-title" target="_blank" href="{{ url }}" >{{title}}</a>
-    <p>{{content}}</p>
+
   </div>
   <div class="card-footer">
     <a target="_blank" class="btn btn-outline-danger btn-round" href="{{ url }}">Read more</a>
