--- a/assets/scss/custom/_variables.scss
+++ b/assets/scss/custom/_variables.scss
@@ -10,3 +10,5 @@ $text-primary: #223464;
 $card-background: #FFFFFF;
 $card-border-color: #707070;
 $card-border-radius: 10px;
+
+$card-title: #3C4858;
