--- a/partials/post.hbs
+++ b/partials/post.hbs
@@ -14,9 +14,9 @@
       </span>
     </div>
     <a class="card-title" target="_blank" href="{{ url }}" >{{title}}</a>
-
+    <p class="card-text">{{excerpt characters="100"}}...</p>
   </div>
   <div class="card-footer">
-    <a target="_blank" class="btn btn-outline-danger btn-round" href="{{ url }}">Read more</a>
+    <a target="_blank" class="btn btn-outline-danger btn-round btn-sm" href="{{ url }}">Read more</a>
   </div>
 </div>
