--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7080,7 +7080,6 @@ a {
 
 .card {
   width: 100%;
-  max-height: 400px;
   overflow: hidden;
   margin-bottom: 30px;
   border: none;
@@ -7091,12 +7090,11 @@ a {
   .card .card-header {
     background-color: transparent;
     border-bottom: none;
-    padding: 20px;
-    padding-bottom: 5px; }
-  .card .card-img-top {
-    max-height: 276px;
-    border-radius: 6px;
-    box-shadow: 0 15px 30px 0 rgba(48, 54, 77, 0.1); }
+    padding: 20px; }
+    .card .card-header .card-img-top {
+      max-height: 276px;
+      border-radius: 6px;
+      box-shadow: 0 15px 30px 0 rgba(48, 54, 77, 0.1); }
   .card .card-footer {
     background-color: transparent;
     border-top: none; }
