--- a/index.hbs
+++ b/index.hbs
@@ -29,12 +29,16 @@
   <div class="section-content">
     <div class="container">
       <div class="row">
-          <div class="col-md-8">
-            {{> "loop"}}
+        <div class="col-md-8">
+          {{> "loop"}}
+        </div>
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-md-12">
+              {{> sidebar}}
+            </div>
           </div>
-          <div class="col-md-4">
-            {{> sidebar}}
-          </div>
+        </div>
       </div>
     </div>
   </div>
