--- a/layouts/default.hbs
+++ b/layouts/default.hbs
@@ -19,7 +19,7 @@
   <link rel="icon" sizes="128x128" href="{{asset "/img/icon_128.png"}}">
 
   <link rel="stylesheet" href="{{asset 'assets/css/main.css'}}">
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,,600,800,900,300,200" rel="stylesheet">
   <link rel="stylesheet" href="{{asset "assets/font/font-awesome/css/font-awesome.css"}}">
   {{ghost_head}}
 
