--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -6,12 +6,17 @@
       {{@site.title}}
     </a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav mr-auto">
         {{#foreach navigation}}
         <li class="nav-item {{#if current}} is-active{{/if}}">
           <a href="{{url absolute="true"}}" class="nav-link">{{label}}</a>
         </li>
         {{/foreach}}
+      </ul>
+      <ul class="nav-social ml-auto">
+        <li class="nav-item">
+          <a href="#"></a>
+        </li>
       </ul>
     </div>
   </div>
