--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -13,9 +13,21 @@
         </li>
         {{/foreach}}
       </ul>
-      <ul class="nav-social ml-auto">
+      <ul class="nav-social navbar-nav ml-auto">
         <li class="nav-item">
-          <a href="#"></a>
+          <a href="/blog" class="nav-link">Blog</a>
+        </li>
+        <li class="nav-item">
+          <a href="#ceva" class="nav-link"><i class="fa fa-twitter"></i></a>
+        </li>
+        <li class="nav-item">
+          <a href="#ceva" class="nav-link"><i class="fa fa-facebook"></i></a>
+        </li>
+        <li class="nav-item">
+          <a href="#ceva" class="nav-link"><i class="fa fa-instagram"></i></a>
+        </li>
+        <li class="nav-item">
+          <button type="button" name="button" class="btn btn-danger btn-round ml-2">Submit product</button>
         </li>
       </ul>
     </div>
