--- a/index.hbs
+++ b/index.hbs
@@ -4,16 +4,17 @@
   <div class="section section-header">
     <div class="container">
       <div class="row">
-        <div class="col-lg-5 text-sm-left text-center">
+        <div class="col-md-4 text-sm-left text-center">
           <img alt="Angular Expo" src="{{asset "/img/logo/angular.png"}}" height="60" width="60" style="margin-top: 100px">
           <h1>{{@site.title}}</h1>
           <p>{{@site.description}}</p>
           <div class="form-group form-subscribe">
             <input type="text" placeholder="Your email" class="form-control">
+            <button type="button" name="button" class="btn btn-round btn-danger btn-submit btn-sm">Subscribe</button>
           </div>
         </div>
-        <div class="col-lg-7">
-
+        <div class="col-md-8">
+          <img src="{{asset "/img/example-17.png"}}" alt="asd" class="w-100">
         </div>
       </div>
     </div>
