--- a/index.hbs
+++ b/index.hbs
@@ -14,7 +14,7 @@
           </div>
         </div>
         <div class="col-md-8">
-          <img src="{{asset "/img/example-17.png"}}" alt="asd" class="w-100">
+          <img src="{{asset "/img/illustratio_header.svg"}}" alt="asd" class="w-100">
         </div>
       </div>
     </div>
