--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -1,7 +1,7 @@
 
 
 <nav aria-label="...">
-  <ul class="pagination justify-content-center">
+  <ul class="pagination justify-content-center align-items-center">
     <li class="page-item">
       {{#if prev}}
         <a class="page-link" href="{{page_url prev}}">PREV</a>
