feature/changed svg structure

--- a/layouts/default.hbs
+++ b/layouts/default.hbs
@@ -25,6 +25,7 @@
 
 </head>
 <body class="{{body_class}}">
+  <img src="{{asset "/img/illustratio_header.svg"}}" alt="asd" class="image-svg">
 
   {{navigation}}
   {{{body}}}
