--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7078,6 +7078,12 @@ a {
     text-decoration: none !important;
     color: #223464 !important; }
 
+.image-svg {
+  width: 80%;
+  position: absolute;
+  top: 0;
+  right: 0; }
+
 .card {
   width: 100%;
   overflow: hidden;
