feature/changed page-number style

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7213,6 +7213,7 @@ a {
 
 .pagination .page-number {
   font-size: 12px;
+  text-transform: uppercase;
   color: #223464; }
 
 /*# sourceMappingURL=main.css.map */
