--- a/assets/scss/custom/_navbar.scss
+++ b/assets/scss/custom/_navbar.scss
@@ -5,14 +5,22 @@
   .navbar-brand,
   .navbar-nav .nav-item .nav-link{
     color: $text-primary;
+    font-size: 14px;
+    font-weight: 400;
   }
   .navbar-brand{
+    font-weight: lighter;
+    margin-top: 2px;
     img{
       position: relative;
-      top: -3px;
+      top: -2px;
     }
   }
   .nav-social{
     list-style: none;
+    .nav-item .btn{
+      font-size: 14px;
+      font-weight: lighter;
+    }
   }
 }
