--- a/partials/sidebar0.hbs
+++ b/partials/sidebar0.hbs
@@ -2,23 +2,6 @@
   {{> bsa-1  }}
 </div>
 {{> post-creativetim }}
-<div class="card angular-expo--shadow card-tags">
-  <div class="card-header">
-    <h5>Tags</h5>
-  </div>
-  <div class="card-body">
-    {{#get "tags" include="count.posts" order="count.posts desc"}}
-      <ul class="tags-menu">
-        {{#foreach tags}}
-          <li>
-            <a href="{{url}}">{{name}}</a>
-            <p>{{count.posts}}</p>
-          </li>
-        {{/foreach}}
-      </ul>
-    {{/get}}
-  </div>
-</div>
 <div class="card  angular-expo--shadow">
   <div class="card-header">
     <h2 class="card-title">Subscribe</h2>
@@ -49,6 +32,20 @@
   </div>
 </div>
 
+<div class="card angular-expo--shadow">
+  <div class="card-header">
+    <h2 class="card-title">Recent posts</h2>
+  </div>
+  <div class="card-body">
+    {{#get "posts" limit="10" as |recents|}}
+      <ul>
+        {{#foreach recents}}
+          <li><a href="{{url}}">{{title}}</a></li>
+        {{/foreach}}
+      </ul>
+    {{/get}}
+  </div>
+</div>
 {{> post-creativetim0 }}
 
 <script>
