--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -19,27 +19,27 @@
     {{/get}}
   </div>
 </div>
-<div class="card  angular-expo--shadow">
+<div class="card  angular-expo--shadow card-subscribe">
   <div class="card-header">
-    <h2 class="card-title">Subscribe</h2>
+    <h5>Subscribe</h5>
   </div>
   <div class="card-body">
-
-    Join our monthly newsletter and never miss out on new Angular examples, demos and experiments.
-
+    <p>
+      Join our monthly newsletter and never miss out on new Angular examples, demos and experiments.
+    </p>
     <div id="mc_embed_signup">
       <form action="//angularexpo.us14.list-manage.com/subscribe/post?u=20206c0829ddb0efe4d35bc7a&amp;id=c32002db8f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
         <div id="mc_embed_signup_scroll">
           <div class="form-input">
-            <input class="required email mdl-textfield__input" type="email" id="mce-EMAIL" name="EMAIL" placeholder="Email Address">
+            <input class="required email text-input" type="email" id="mce-EMAIL" name="EMAIL" placeholder="Your Email...">
           </div>
         	<div id="mce-responses" class="clear">
         		<div class="response" id="mce-error-response" style="display:none"></div>
         		<div class="response" id="mce-success-response" style="display:none"></div>
         	</div>
           <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_20206c0829ddb0efe4d35bc7a_c32002db8f" tabindex="-1" value=""></div>
-          <div class="clear">
-            <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-danger">
+          <div class="clear submit-button">
+            <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-outline-danger btn-round btn-sm">
               Subscribe
             </button>
           </div>
