--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,39 +1,59 @@
 
-<footer class="footer" style="background-color: black; color: #fff">
+<footer class="footer">
   <div class="container">
     <div class="row">
+      <div class="col-lg-4 col-md-6 ml-auto mr-auto d-flex">
+        <div class="vuejs-expo">
+          <a href="/madewithreact" class="float-buttons ml-auto mr-auto">
+            <img src="{{asset "img/icon_48.png"}}" alt="angular">
+          </a>
+          <a href="/madewithreact">
+            vuejsexpo
+          </a>
+        </div>
+        <div class="made-with-react">
+          <a href="/madewithreact" class="float-buttons ml-auto mr-auto">
+            <img src="{{asset "img/icon_48.png"}}" alt="angular">
+          </a>
+          <a href="/madewithreact">
+            madewithreact
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="row">
       <div class="col-md-3">
-        <h5 class="text-white"><b style="padding-left:1px;">About</b></h5>
-        <p class="text-white-50">
+        <h5><b style="padding-left:1px;">About</b></h5>
+        <p>
           Angular Expo is a beautiful showcase of websites, applications and experiments using the Angular JavaScript framework. Angular Expo has over 75+ AngularJS examples, including demos.
         </p>
       </div>
       <div class="col-md-3">
-        <h5 class="text-white"><b>Links</b></h5>
+        <h5><b>Links</b></h5>
         <ul class="nav flex-column list-unstyled">
-          <li class="nav-item"><a class="text-white-50" target="_blank" href="https://angular.io/">Official Website</a></li>
-          <li class="nav-item"><a class="text-white-50" target="_blank" href="https://angular.io/docs/js/latest/">Official Documentation</a></li>
-          <li class="nav-item"><a class="text-white-50" target="_blank" href="https://www.creative-tim.com/bootstrap-themes/angular-dashboard/?partner=93321"  onClick="ga('send', 'event', 'Outbound', 'Footer', 'https://www.creative-tim.com/bootstrap-themes/angular-dashboard/?partner=93321')">Angular Templates</a></li>
-          <li class="nav-item"><a class="text-white-50" target="_blank" href="https://github.com/expojs/angularexpo">Github Angular Expo</a></li>
+          <li class="nav-item"><a target="_blank" href="https://angular.io/">Official Website</a></li>
+          <li class="nav-item"><a target="_blank" href="https://angular.io/docs/js/latest/">Official Documentation</a></li>
+          <li class="nav-item"><a target="_blank" href="https://www.creative-tim.com/bootstrap-themes/angular-dashboard/?partner=93321"  onClick="ga('send', 'event', 'Outbound', 'Footer', 'https://www.creative-tim.com/bootstrap-themes/angular-dashboard/?partner=93321')">Angular Templates</a></li>
+          <li class="nav-item"><a target="_blank" href="https://github.com/expojs/angularexpo">Github Angular Expo</a></li>
         </ul>
       </div>
       <div class="col-md-3">
-        <h5 class="text-white"><b>More Information</b></h5>
+        <h5><b>More Information</b></h5>
         <ul class="nav flex-column list-unstyled">
-          <li class="nav-item"><a class="text-white-50" href="{{@site.url}}/about/">About Us</a></li>
-          <li class="nav-item"><a class="text-white-50" href="mailto:angularexpo@gmail.com">Contact</a></li>
-          <li class="nav-item"><a class="text-white-50" href="{{@site.url}}/advertise/">Advertise</a></li>
-          <li class="nav-item"><a class="text-white-50" href="#" onclick="dialog.showModal();return false;">Newsletter</a></li>
-          <li class="nav-item"><a class="text-white-50" href="https://docs.google.com/forms/d/1I_FAai7Z5VFpZvOxFS68yZsCDsAngnOknIqzCwbBjE0" target="_blank">Submit link</a></li>
-          <li class="nav-item"><a class="text-white-50" href="https://twitter.com/AngularExpo" target="_blank">Twitter</a></li>
-          <li class="nav-item"><a class="text-white-50" href="https://www.facebook.com/AngularExpo" target="_blank">Facebook</a></li>
+          <li class="nav-item"><a href="{{@site.url}}/about/">About Us</a></li>
+          <li class="nav-item"><a href="mailto:angularexpo@gmail.com">Contact</a></li>
+          <li class="nav-item"><a href="{{@site.url}}/advertise/">Advertise</a></li>
+          <li class="nav-item"><a href="#" onclick="dialog.showModal();return false;">Newsletter</a></li>
+          <li class="nav-item"><a href="https://docs.google.com/forms/d/1I_FAai7Z5VFpZvOxFS68yZsCDsAngnOknIqzCwbBjE0" target="_blank">Submit link</a></li>
+          <li class="nav-item"><a href="https://twitter.com/AngularExpo" target="_blank">Twitter</a></li>
+          <li class="nav-item"><a href="https://www.facebook.com/AngularExpo" target="_blank">Facebook</a></li>
         </ul>
       </div>
       <div class="col-md-3">
-        <h5 class="text-white"><b>Special Thanks</b></h5>
+        <h5><b>Special Thanks</b></h5>
         <ul class="nav flex-column list-unstyled">
-          <li class="nav-item"><a class="text-white-50" href="https://iradesign.io/?ref=angularexpo">IRA Design</a></li>
-          <li class="nav-item"><a class="text-white-50" href="https://www.creative-tim.com/templates/angular?ref=angularexpo">Creative Tim</a></li>
+          <li class="nav-item"><a href="https://iradesign.io/?ref=angularexpo">IRA Design</a></li>
+          <li class="nav-item"><a href="https://www.creative-tim.com/templates/angular?ref=angularexpo">Creative Tim</a></li>
         </ul>
       </div>
     </div>
