--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7279,9 +7279,17 @@ a {
       background-color: #fff;
       border-radius: 50%;
       box-shadow: 0 15px 30px 0 rgba(48, 54, 77, 0.1);
-      height: 60px;
-      width: 60px; }
+      height: 80px;
+      width: 80px; }
       .footer .made-with-react .float-buttons img, .footer .vuejs-expo .float-buttons img {
-        padding: 6px; }
+        padding: 17px; }
+  .footer .social-area {
+    max-width: 400px;
+    display: block; }
+    .footer .social-area .footer-social {
+      display: flex;
+      list-style: none;
+      margin: 0;
+      padding: 0; }
 
 /*# sourceMappingURL=main.css.map */
