--- a/assets/scss/custom/_footer.scss
+++ b/assets/scss/custom/_footer.scss
@@ -1,7 +1,7 @@
 .footer{
   background-color: #FCFCFF;
   padding-top: 15px;
-  
+
   .made-with-react, .vuejs-expo{
     /* To correctly align image, regardless of content height: */
    vertical-align: top;
@@ -16,11 +16,22 @@
      background-color: #fff;
      border-radius: 50%;
      box-shadow: 0 15px 30px 0 rgba(48, 54, 77, 0.1);
-     height: 60px;
-     width: 60px;
+     height: 80px;
+     width: 80px;
      img{
-       padding: 6px;
+       padding: 17px;
      }
    }
+  }
+  .social-area{
+    max-width: 400px;
+    display: block;
+
+    .footer-social{
+      display: flex;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
   }
 }
