--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-lg-4 col-md-6 ml-auto mr-auto d-flex justify-content-center">
         <div class="vuejs-expo">
-          <a href="/madewithreact" class="float-buttons ml-auto mr-auto">
+          <a href="/madewithreact" class="float-buttons ml-auto mr-auto mb-3">
             <img src="{{asset "img/icon_48.png"}}" alt="angular">
           </a>
           <a href="/madewithreact">
@@ -12,7 +12,7 @@
           </a>
         </div>
         <div class="made-with-react">
-          <a href="/madewithreact" class="float-buttons ml-auto mr-auto">
+          <a href="/madewithreact" class="float-buttons ml-auto mr-auto mb-3">
             <img src="{{asset "img/icon_48.png"}}" alt="angular">
           </a>
           <a href="/madewithreact">
@@ -21,7 +21,7 @@
         </div>
       </div>
     </div>
-    <div class="row p-5">
+    <div class="row pt-5 pl-5 pr-5">
       <div class="col-md-3">
         <h5><b>Angular Expo</b></h5>
         <p>
