feature/added sidebar to post page

--- a/partials/sidebar0.hbs
+++ b/partials/sidebar0.hbs
@@ -1,36 +1,7 @@
 <div class="card">
   {{> bsa-1  }}
 </div>
-{{> post-creativetim }}
-<div class="card  angular-expo--shadow">
-  <div class="card-header">
-    <h2 class="card-title">Subscribe</h2>
-  </div>
-  <div class="card-body">
-
-    Join our monthly newsletter and never miss out on new Angular examples, demos and experiments.
-
-    <div id="mc_embed_signup">
-      <form action="//angularexpo.us14.list-manage.com/subscribe/post?u=20206c0829ddb0efe4d35bc7a&amp;id=c32002db8f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-        <div id="mc_embed_signup_scroll">
-          <div class="form-input">
-            <input class="required email mdl-textfield__input" type="email" id="mce-EMAIL" name="EMAIL" placeholder="Email Address">
-          </div>
-        	<div id="mce-responses" class="clear">
-        		<div class="response" id="mce-error-response" style="display:none"></div>
-        		<div class="response" id="mce-success-response" style="display:none"></div>
-        	</div>
-          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_20206c0829ddb0efe4d35bc7a_c32002db8f" tabindex="-1" value=""></div>
-          <div class="clear">
-            <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-danger">
-              Subscribe
-            </button>
-          </div>
-        </div>
-      </form>
-    </div>
-  </div>
-</div>
+{{> post-creativetim0 }}
 
 <div class="card angular-expo--shadow">
   <div class="card-header">
@@ -46,12 +17,13 @@
     {{/get}}
   </div>
 </div>
-{{> post-creativetim0 }}
 
 <script>
-  // var randomNumber = Math.floor(Math.random() * (2 - 1 + 1)) + 1;
-  // document.getElementById("theme-" + randomNumber).style.display = "block";
+  var randomNumber = Math.floor(Math.random() * (2 - 1 + 1)) + 1;
   var randomNumber2 = Math.floor(Math.random() * (2 - 1 + 1)) + 3;
-  document.getElementById("theme-" + randomNumber2).style.display = "block";
+
+  document.getElementById("theme-3").style.display = "block";
+  document.getElementById("theme-4").style.display = "block";
+  // document.getElementById("theme-" + randomNumber2).style.display = "block";
 
 </script>
