--- a/post.hbs
+++ b/post.hbs
@@ -7,7 +7,6 @@
     <div class="container-fluid">
       <div class="row d-flex">
         <div class="col-md-8">
-            {{> bsa-1  }}
             <div class="card">
               <a class="" href="{{ url }}">
                 <img class="article-image" src="{{feature_image}}" border="0" alt="{{title}} - Angular">
@@ -81,7 +80,7 @@
             </div>
         </div>
         <div class="col-md-3 col-sm-12 ml-auto">
-          {{> sidebar}}
+          {{> sidebar0}}
         </div>
       </div>
     </div>
