--- a/partials/post-creativetim0.hbs
+++ b/partials/post-creativetim0.hbs
@@ -1,5 +1,5 @@
 
-<div class="card card-static" id="theme-3">
+<div class="card" id="theme-3">
   <div class="card-header">
     <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')" >
       <img class="card-img-top" src="{{asset "img/material-dashboard-pro-angular.jpg"}}"></img>
@@ -16,7 +16,7 @@
   </div>
 </div>
 
-<div class="card card-static" id="theme-4">
+<div class="card" id="theme-4">
   <div class="card-header">
     <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')" >
       <img class="card-img-top" src="{{asset "img/light-bootstrap-dashboard-angular.jpg"}}"></img>
