--- a/post.hbs
+++ b/post.hbs
@@ -4,79 +4,57 @@
 
 <main class="content" role="main">
   <div class="page-content">
-    <div class="container-fluid">
+    <div class="container">
       <div class="row d-flex">
         <div class="col-md-8">
-            <div class="card">
-              <a class="" href="{{ url }}">
-                <img class="article-image" src="{{feature_image}}" border="0" alt="{{title}} - Angular">
-              </a>
+            <div class="card post-card">
               <div class="card-header">
-                <div class="card-supporting-text">
-                    <time datetime="{{date format="YYYY-MM-DD"}}">{{date format="DD MMMM YYYY"}}</time>
-                </div>
-                <div class="card-title">
-                    <h2 class="card-title-text"><a href="{{ url }}">{{title}}</a></h2>
-                </div>
+                <a class="" href="{{ url }}">
+                  <img class="article-image card-img-top" src="{{feature_image}}" border="0" alt="{{title}} - Angular">
+                </a>
               </div>
               <div class="card-body">
-                <p class="card-text">{{content}}</p>
+                <div class="container">
+                  <div class="tags-area">
+                    <span href="{{url}}" class="text-danger">
+                      <b>
+                        {{tags}}
+                      </b>
+                    </span>
+                  </div>
+                  <a class="card-title" target="_blank" href="{{ url }}" >{{title}}</a>
+                  <p class="card-text">{{excerpt}}</p>
+                  <br>
+                  <hr>
+                </div>
               </div>
               <div class="card-footer">
-                <a class="btn btn-fab btn-mini-fab btn-twitter" href="https://twitter.com/intent/tweet?text={{encode title}}&amp;url={{url absolute="true"}}"
-                    onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
-                    <i class="icon-twitter"></i>
-                    <span class="hidden">Twitter</span>
-                </a>
-                <a class="btn btn-fab btn-mini-fab btn-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
-                    onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
-                    <i class="icon-facebook"></i>
-                    <span class="hidden">Facebook</span>
-                </a>
-                <a class="btn btn-fab btn-mini-fab btn-linkedin" href="http://www.linkedin.com/shareArticle?url={{url absolute="true"}}&title={{title}}"
-                    onclick="window.open(this.href, 'linkedinwindow','left=20,top=20,width=600,height=700,toolbar=0,resizable=1'); return false;">
-                    <i class="icon-linkedin"></i>
-                    <span class="hidden">LinkedIn</span>
-                </a>
+                <div class="container">
+                  <a target="_blank" class="btn btn-outline-danger btn-round" href="{{ url }}">Read more</a>
+                  <a target="_blank" class="btn btn-danger btn-round" href="{{ url }}">Live Preview</a>
+                  <a target="_blank" class="btn btn-secondary btn-round" href="{{ url }}">Get Hosting</a>
+                </div>
               </div>
             </div>
             <div class="row">
-              {{#next_post}}
-                <div class="col-md-6 col-lg-4">
-                  <div class="card">
+                <div class="col-md-6 col-lg-6">
+
+                  <div class="card recent-posts">
+                    <div class="card-header">
+                      <h2 class="card-title">Recent posts</h2>
+                    </div>
                     <div class="card-body">
-                      <a class="read-next-story {{#if feature_image}}" style="background-image: url({{feature_image}}){{else}}no-cover{{/if}}" href="{{url}}">
-                        <a class="card-media" href="{{ url }}">
-                          <div class="article-image" style="background-image:url({{feature_image}})"></div>
-                        </a>
-                        <div class="card-title">
-                          <h2 class="card-title-text"><a href="{{ url }}">{{title}}</a></h2>
-                        </div>
-                      </a>
+                      {{#get "posts" limit="5" as |recents|}}
+                        <ul>
+                          {{#foreach recents}}
+                            <li><a href="{{url}}">{{title}}</a></li>
+                          {{/foreach}}
+                        </ul>
+                      {{/get}}
                     </div>
                   </div>
 
                 </div>
-              {{/next_post}}
-              {{^next_post}}
-                <div class="col-md-6"></div>
-              {{/next_post}}
-              {{#prev_post}}
-                <div class="col-md-6">
-                  <div class="card">
-                    <div class="card-body">
-                      <a class="read-next-story {{#if feature_image}}" style="background-image: url({{feature_image}}){{else}}no-cover{{/if}}" href="{{url}}">
-                        <a class="card-media" href="{{ url }}">
-                          <div class="article-image" style="background-image:url({{feature_image}})"></div>
-                        </a>
-                        <div class="card-title">
-                          <h2 class="card-title-text"><a href="{{ url }}">{{title}}</a></h2>
-                        </div>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              {{/prev_post}}
             </div>
         </div>
         <div class="col-md-3 col-sm-12 ml-auto">
