--- a/post.hbs
+++ b/post.hbs
@@ -61,6 +61,9 @@
           {{> sidebar0}}
         </div>
       </div>
+      <div class="row margin-100">
+        {{> subscribe-area}}
+      </div>
     </div>
   </div>
 </main>
