feature/remove class content from pages

--- a/author.hbs
+++ b/author.hbs
@@ -1,6 +1,6 @@
 {{!< layouts/default}}
 
-<main class="content" role="main">
+<main role="main">
   {{> bsa-1  }}
   <div class="page-content">
     {{> "loop"}}
