--- a/error.hbs
+++ b/error.hbs
@@ -1,6 +1,6 @@
 {{!< layouts/default}}
 
-<main class="content" role="main">
+<main role="main">
   <div class="page-content">
     <div class="row">
       <div class="col-md-6 ml-auto mr-auto text-center">
