--- a/index.hbs
+++ b/index.hbs
@@ -1,6 +1,6 @@
 {{!< layouts/default}}
 
-<main class="content" role="main">
+<main role="main">
   <div class="section section-header">
     <div class="container">
       <div class="row">
