--- a/post.hbs
+++ b/post.hbs
@@ -2,7 +2,7 @@
 
 {{#post}}
 
-<main class="content" role="main">
+<main role="main">
   <div class="page-content">
     <div class="container">
       <div class="row d-flex">
