--- a/tag.hbs
+++ b/tag.hbs
@@ -1,6 +1,6 @@
 {{!< layouts/default}}
 
-<main class="content" role="main">
+<main role="main">
   <div class="section-content">
     <div class="container">
       <div class="row">
