--- a/index.hbs
+++ b/index.hbs
@@ -4,7 +4,7 @@
   <div class="section section-header">
     <div class="container">
       <div class="row">
-        <div class="col-lg-4 col-12 text-sm-left text-center">
+        <div class="col-lg-4 col-md-8 col-12 text-lg-left text-center text-md-center ml-auto mr-auto">
           <img alt="Angular Expo" src="{{asset "/img/logo/angular.png"}}" height="60" width="60" style="margin-top: 100px">
           <h1>{{@site.title}}</h1>
           <p class="text-description">{{@site.description}}</p>
@@ -27,7 +27,7 @@
       </button>
     </div>
   </div>
-  <div class="section-content">
+  <div class="page-content">
     <div class="container">
       <div class="row">
         <div class="col-md-8">
