--- a/tag.hbs
+++ b/tag.hbs
@@ -1,7 +1,7 @@
 {{!< layouts/default}}
 
 <main role="main">
-  <div class="section-content">
+  <div class="page-content">
     <div class="container">
       <div class="row">
         <div class="col-md-8">
