--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -1,10 +1,10 @@
 
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-lg-6 col-md-12 col-12">
     {{> post-creativetim }}
   </div>
   {{#foreach posts from="1" to="9"}}
-    <div class="col-md-6">
+    <div class="col-lg-6 col-md-12 col-12">
         {{> post}}
     </div>
   {{/foreach}}
