--- a/page.hbs
+++ b/page.hbs
@@ -4,12 +4,9 @@
 
 <main role="main">
   <div class="page-content">
-    <div class="row">
-      <div class="col-md-2">
-
-      </div>
-      <div class="col-md-8">
-          {{> bsa-1  }}
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8">
           <div class="card">
             <div class="card-header">
               <div class="card-title">
@@ -20,9 +17,16 @@
               {{content}}
             </div>
           </div>
+        </div>
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-md-12">
+              {{> sidebar}}
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-
   </div>
 </main>
 
